# narraflow

./: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: audio_gen.py  image_gen.py  llm.py  logging_config.py  main.py  models.py  utils.py
static/: app.js  index.html  styles.css  ws.js
static/css/: styles.css
static/js/: api.js  app.js  state-management.js  state.js  ui.js
templates/: index.html
templates/partials/: authors.html  error.html  keywords.html  message.html  messages.html  notification.html  theme.html
