[project]
name = "narraflow"
version = "0.1.0"
description = "A web application that enables interactive storytelling with real-time AI-generated illustrations, featuring a chat interface and dynamic keyword suggestions."

[tool.poetry]
name = "narraflow"
version = "0.1.0"
description = ""
authors = ["Igor Tarasenko <tarasenko.igor.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fal-client = "^0.5.4"
fastapi = "^0.115.3"
instructor = "^1.6.3"
uvicorn = "^0.32.0"
openai = "^1.52.2"
anthropic = "^0.37.1"
python-multipart = "^0.0.12"
elevenlabs = "^1.11.0"
minio = "^7.2.10"
rich = "^13.9.3"
nest-asyncio = "^1.6.0"
pyngrok = "^7.2.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
